; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_smf.c_ReadVarInt.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_smf.c_ReadVarInt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ReadVarInt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ReadVarInt(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %27, %1
  %8 = load i32, i32* %6, align 4
  %9 = icmp ult i32 %8, 4
  br i1 %9, label %10, label %30

10:                                               ; preds = %7
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @vlc_stream_Read(i32* %11, i32* %5, i32 1)
  %13 = icmp slt i32 %12, 1
  br i1 %13, label %14, label %15

14:                                               ; preds = %10
  store i32 -1, i32* %2, align 4
  br label %31

15:                                               ; preds = %10
  %16 = load i32, i32* %4, align 4
  %17 = shl i32 %16, 7
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 127
  %20 = or i32 %17, %19
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %5, align 4
  %22 = and i32 %21, 128
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %15
  %25 = load i32, i32* %4, align 4
  store i32 %25, i32* %2, align 4
  br label %31

26:                                               ; preds = %15
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %6, align 4
  %29 = add i32 %28, 1
  store i32 %29, i32* %6, align 4
  br label %7

30:                                               ; preds = %7
  store i32 -1, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %24, %14
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @vlc_stream_Read(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
